🐛 fix: 添加Vite构建配置以清空输出目录并更新构建前脚本

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "prebuild": "rimraf .nuxt && rimraf .output",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
